# tm1_bedrock_py

./: .gitignore  README.md  config.ini  main.py  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt  setup.py  setup2.py  tm1_bedrock.py  tm1_bench_py-0.0.0-py3-none-any.whl
.github/workflows/: pr_ci.yaml  publish_to_pypi.yml  test_and_build.yaml  test_dimension_builder.yaml
TM1_bedrock_py/: __init__.py  bedrock.py  context_metadata.py  extractor.py  input.py  loader.py  logging.json  tm1_bedrock.py  transformer.py  utility.py
TM1_bedrock_py/airflow_executor/: __init__.py  async_executor.py  async_executor_common.py  common.py  csv_tm1_async_executor.py  sql_tm1_async_executor.py  tm1_async_executor.py
TM1_bedrock_py/dimension_builder/: apply.py  exceptions.py  io.py  normalize.py  utility.py  validate.py
docs/source/: airflow_executor.rst  async_csv.rst  async_executor.rst  async_sql.rst  async_sql_to_tm1.rst  async_tm1_to_sql.rst  conf.py  data_copy.rst  index.rst  tm1_csv.rst  tm1_sql.rst  usage.rst
example/: check_connectivity.py  company.csv  config_example.ini  context_metadata_test.yaml  dimension_builder_append.xlsx  dimension_builder_build_test.xlsx  dimension_builder_init.xlsx  dimension_builder_update.xlsx  hierarchy_builder_rebuild.xlsx  main.py  sys_group_nucleus_config_measure.csv  sys_group_nucleus_content.csv  sys_group_nucleus_content_detail_mapping_check_line.csv  test_param_inputs.yaml  test_template_render.yaml  test_template_render_basic.yaml
schema/: config.yaml  schema.yaml  variables.yaml
schema/cubes/: Discount.yaml  MappingKeyAccountManagerToOrganizationUnit.yaml  MappingProductToAccount.yaml  PnL.yaml  Price.yaml  Sales.yaml
schema/datasets/: 01_version_attributes.yaml  02_account_attributes.yaml  03_keyaccountmanager_attributes.yaml  04_organizationunit_attributes.yaml  05_product_attributes.yaml  06_customer_attributes.yaml  07_sales_data.yaml  08_discount_data.yaml  09_price_data.yaml  10_orgunit_kam_data.yaml  11_product_sales_to_account_rev.yaml
schema/dimensions/custom/: period.yaml
schema/dimensions/df_templates/: account.yaml  customer.yaml  keyaccountmanager.yaml  product.yaml
schema/dimensions/elementlist/: measurediscount.yaml  measuremappingkeyaccountmanagertoorganizationunit.yaml  measuremappingproducttoaccount.yaml  measurepnl.yaml  measureprice.yaml  measuresales.yaml  organizationunit.yaml  version.yaml
test/: requirements.txt  test_unit.py  test_unit.yaml
tests/: benchtest_config.py  config.ini  config.py  test_benchmark.py  test_benchmark.yaml  test_integration.py  test_integration.yaml  test_unit.py  test_unit.yaml
tests/dataframe_to_csv/: sample_data.csv
tests/tests_dimension_builder/: test_data.py  test_unit.py  test_unit.yaml
tests/tests_dimension_builder/test_data/: attributes_only.csv  level_columns.csv  level_columns_attribute_list.csv  level_columns_filled_levels.csv  (+6 more)
tests_integration_airflow/: Dockerfile  docker-compose.yaml
tests_integration_airflow/dags/: airflow_tm1_bedrock_py_test.py  async_csv_to_tm1.py  async_sql_to_tm1.py  async_tm1_to_sql.py  dag_config.yaml  end_to_end.py
tests_integration_airflow/plugins/: tm1_bedrock.py
tests_integration_mssql/: Dockerfile  docker-compose.yaml  init-db.sql
tm1_bedrock_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tm1_git_py/: __init__.py  changeset.py  comparator.py  deserializer.py  exporter.py  filter.py  future.txt  main.py  pyproject.toml  serializer.py  setup.py  tm1_to_model.py  tm1project.json  tm1project_filter.txt  tm1project_to_filter.py
tm1_git_py/Test/: test_comparator.py  test_filter.py  test_tm1project_to_filter.py  tm1project_filter.txt
tm1_git_py/model/: __init__.py  chore.py  cube.py  dimension.py  edge.py  element.py  hierarchy.py  mdxview.py  model.py  process.py  rule.py  subset.py  task.py  ti.py
tm1_git_py/tests/: changeset.txt  filter.txt  test_comparator.py  test_filter.py
(+1098 files in other folders)
