[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm1_bedrock_py"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A python modul for TM1 Bedrock."
readme = "README.md"
requires-python = ">=3.7"
keywords=["TM1", "IBM Cognos TM1", "Planning Analytics", "PA", "Cognos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "TM1py>=2.1, <3.0",
    "pandas>=2.0.0,<2.2.0",
    "json_logging>=1.3.0, <2.0.0",
    "sqlalchemy>=1.4.42,<2.0.0",
    "pyodbc>=5.2.0,<6.0.0"
]

[project.scripts]
tm1_to_model = "tm1_git_py.tm1_to_model:main"
deserializer = "tm1_git_py.deserializer:main"
serializer = "tm1_git_py.serializer:main"
tm1project_to_filter = "tm1_git_py.tm1project_to_filter:main"
filter = "tm1_git_py.filter:main"
comparator = "tm1_git_py.comparator:main"

[project.optional-dependencies]
airflow= [
    "airflow_provider_tm1>=0.3.0,<1.0.0",
    "apache_airflow>=2.4.0,<=2.10.5"
]
dev = [
    "parametrize_from_file>=0.20.0,<1.0.0",
    "pytest>=8.3.4,<9.0.0",
    "build>=1.2.2.post1,<2.0.0",
    "matplotlib>=3.10.1,<4.0.0"
]

[tool.setuptools]
packages = ["TM1_bedrock_py", "tm1_git_py", "tm1_git_py.model"]
